Fixes rotating word from being cut off

--- a/src/ui/Subheading.module.scss
+++ b/src/ui/Subheading.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 84%;
-  // background-color: pink;
+  background-color: pink;
 
   // @media (max-width: 800px) {
   //   width: 90%;
@@ -41,7 +41,7 @@
   }
 
   @media (max-width: 1000px) {
-    width: 9rem;
+    width: 10rem;
   }
 
   @media (max-width: 800px) {
